header confing + hero config

--- a/index.html
+++ b/index.html
@@ -10,9 +10,42 @@
 </head>
 <body>  
     <header>
-        <figure>
-            <img src="" alt="">
+<!-- discord logo -->
+        <figure class="logo">
+            <img src="" alt="x">
         </figure>
+    
+<!-- nav links -->
+        <nav>
+            <ul>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+        </nav>
+
+<!-- login -->
+        <div class="button">
+            <button>login</button>
+        </div>
     </header>
+
+<!-- hero content -->
+    <div class="hero">
+        <h1>Lorem</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur 
+            adipisicing elit. Labore eius quisquam 
+            dolorem ea perspiciatis suscipit ut eum 
+            ipsa, totam facilis fugit consequatur 
+            excepturi et accusantium numquam mollitia 
+            voluptatem architecto? Rem.
+        </p>
+        <div class="download-links">
+            <a href="">x</a>
+            <a href="">x</a>
+        </div>
+    </div>
 </body>
 </html>
