--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
 <!-- hero content -->
     <div class="hero">
         <h1>Lorem</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur 
-            adipisicing elit. Labore eius quisquam 
-            dolorem ea perspiciatis suscipit ut eum 
-            ipsa, totam facilis fugit consequatur 
-            excepturi et accusantium numquam mollitia 
-            voluptatem architecto? Rem.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minima, sit reiciendis consectetur, porro quasi quidem ad et temporibus unde eaque vitae provident veniam odio pariatur, dolor eum officia? Deleniti.
         </p>
         <div class="download-links">
-            <a href="">x</a>
-            <a href="">x</a>
+            <ul>
+                <li>
+                    <a href="">xxxxxxxxxx</a>
+                </li>
+                <li>
+                    <a href="">xxxxxxxxxx</a>
+                </li>
+            </ul>
         </div>
     </div>
 </body>
