section 5 with download link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
 <!-- discord logo -->
         <figure class="logo">
-            <img src="" alt="x">
+            <img src="" alt="">
         </figure>
 
 <!-- nav links -->
@@ -40,7 +40,7 @@
         <div class="download-links">
             <ul>
                 <li>
-                    <a href="">x</a>
+                    <a href=""><span>&#8595;</span></a>
                 </li>
                 <li>
                     <a href="">x</a>
@@ -56,7 +56,7 @@
         <figure>
             <img src="" alt="x">
         </figure>
-        <div class="right-text">
+        <div class=" text">
             <h2>Lorem</h2>
             <p>Lorem, ipsum dolor sit amet consectetur 
                 adipisicing elit. Asperiores, alias. lore
@@ -68,7 +68,7 @@
 
 <!-- section 2 with text and pictures -->
     <div class="section">
-        <div class="right-text">
+        <div class=" text">
             <h2>Lorem</h2>
             <p>Lorem, ipsum dolor sit amet consectetur 
                 adipisicing elit. Asperiores, alias. lore
@@ -86,7 +86,7 @@
         <figure>
             <img src="" alt="x">
         </figure>
-        <div class="right-text">
+        <div class="text">
             <h2>Lorem</h2>
             <p>Lorem, ipsum dolor sit amet consectetur 
                 adipisicing elit. Asperiores, alias. lore
@@ -98,7 +98,7 @@
 
 <!-- section 4 with pictures and text -->
     <div>
-        <div class="right-text">
+        <div class="text">
             <h2>Lorem</h2>
             <p>Lorem, ipsum dolor sit amet consectetur 
                 adipisicing elit. Asperiores, alias. lore
@@ -109,7 +109,15 @@
         </div>
     </div>
 
-    
+    <br>
+
+<!-- section 5 with download link  -->
+    <div class="ending-section">
+        <div class="download-links">
+            <h3>Lorem</h3>
+            <a href=""><span>&#8595;</span></a>
+        </div>
+    </div>
 
 </body>
 </html>
