partial footer config

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- login -->
         <div class="button">
-            <button>login</button>
+            <button>x</button>
         </div>
     </header>
 
@@ -119,5 +119,61 @@
         </div>
     </div>
 
+    <footer>
+        <div>
+            <h3>Lorem ipsum </h3>
+            <p id="language">Lang</p>
+            <div class="icons">
+                <img src="" alt="x">
+                <img src="" alt="x">
+                <img src="" alt="x">
+                <img src="" alt="x">
+            </div>
+        </div>
+        <div class="footer-nav">
+            <div>
+                <ul>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                    <li>x</li>
+                </ul>
+            </div>
+            
+        </div>
+        <hr>
+        <!-- <div>
+            <img src="" alt="">
+            <button>register</button>
+        </div> -->
+    </footer>
 </body>
 </html>
